--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.110.1
 uvicorn[standard]==0.29.0
 sqlalchemy==2.0.27
-psycopg[binary,pool]==3.1.18
+psycopg[binary,pool]>=3.2,<3.3
 pgvector==0.2.5
 pydantic==1.10.14
 python-dotenv==1.0.1
