feat: add translator service and family dataset

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ PGVECTOR_DIM=384
 PGVECTOR_METRIC=cosine
 
 NEXT_PUBLIC_API_BASE_URL=http://backend:8000
+INTERNAL_API_BASE_URL=http://backend:8000
 
 # 离线 MVP 先留空；以后接入再填
 OPENAI_API_KEY=
+
+TRANSLATOR_BASE_URL=http://localhost:9000
