--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,13 +4,17 @@ POSTGRES_DB=uae_legal
 POSTGRES_PORT=5432
 
 DB_HOST=db
-DB_URL=postgresql+psycopg://postgres:postgres@db:5432/uae_legal
+# 如果需要从宿主机运行脚本（如 seed_loader），可以将 DB_HOST 改为 localhost，
+# 并把 POSTGRES_PORT 改为映射端口（默认 docker-compose 映射为 5433）。
+
 FRONTEND_ORIGIN=http://localhost:3000
 
 BACKEND_PORT=8000
 
 PGVECTOR_DIM=384
 PGVECTOR_METRIC=cosine
+
+TRANSLATOR_BASE_URL=http://translator:9000
 
 # 离线 MVP 先留空；以后接入再填
 OPENAI_API_KEY=
