--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,7 @@ python-dotenv==1.0.1
 numpy==1.26.4
 python-dateutil==2.8.2
 pytest==7.4.4
+httpx==0.27.0
+beautifulsoup4==4.12.3
+PyYAML==6.0.1
+pypdf==6.1.3
