chore: wire render start script

--- a/render.yaml
+++ b/render.yaml
@@ -6,5 +6,5 @@ services:
     rootDir: .
     pythonVersion: 3.11.9
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn backend.main:app --host 0.0.0.0 --port $PORT
+    startCommand: ./scripts/render_boot.sh
     autoDeploy: true
