chore: copy static assets into standalone build

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "mkdir -p .next/standalone/public .next/standalone/.next && cp -r public/. .next/standalone/public/ 2>/dev/null || true && cp -r .next/static .next/standalone/.next/",
     "start": "next start",
     "lint": "next lint"
   },
